project part2 mapper changed

--- a/project/nbproject/project.properties
+++ b/project/nbproject/project.properties
@@ -63,7 +63,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=project.part1.WordCount
+main.class=part1.WordCount
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
