project all parts commited

--- a/project/nbproject/project.properties
+++ b/project/nbproject/project.properties
@@ -29,16 +29,15 @@ dist.jar=${dist.dir}/project.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-lang3-3.5.jar=lib\\commons-lang3-3.5.jar
 file.reference.hadoop-common-2.7.3.jar=lib/hadoop-common-2.7.3.jar
 file.reference.hadoop-mapreduce-client-core-2.7.3.jar=lib/hadoop-mapreduce-client-core-2.7.3.jar
-file.reference.mrunit-1.0.0-hadoop2.jar=lib/mrunit-1.0.0-hadoop2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.junit_4.classpath}:\
     ${file.reference.hadoop-common-2.7.3.jar}:\
     ${file.reference.hadoop-mapreduce-client-core-2.7.3.jar}:\
-    ${file.reference.mrunit-1.0.0-hadoop2.jar}
+    ${file.reference.commons-lang3-3.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
