--- a/projects/mapreduce/project/.classpath
+++ b/projects/mapreduce/project/.classpath
@@ -2,7 +2,23 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Users/985565/Downloads/hadoop-common-2.7.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/985565/Downloads/hadoop-mapreduce-client-core-2.7.3.jar"/>
+	<classpathentry kind="lib" path="/home/cloudera/.m2/repository/org/apache/hadoop/hadoop-common/2.6.0-cdh5.8.0/hadoop-common-2.6.0-cdh5.8.0.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="org.apache.hadoop"/>
+			<attribute name="maven.artifactId" value="hadoop-common"/>
+			<attribute name="maven.version" value="2.6.0-cdh5.8.0"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/home/cloudera/.m2/repository/org/apache/hadoop/hadoop-mapreduce-client-core/2.6.0-cdh5.8.0/hadoop-mapreduce-client-core-2.6.0-cdh5.8.0.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="org.apache.hadoop"/>
+			<attribute name="maven.artifactId" value="hadoop-mapreduce-client-core"/>
+			<attribute name="maven.version" value="2.6.0-cdh5.8.0"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
